// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calcul should match Calcul snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="calcul"
      >
        <h2>
          Lets do some math!
        </h2>
        <div
          class="container flex"
        >
          <div
            class="child result flex"
          >
            0
          </div>
          <div
            class="child flex"
          >
            <button
              class="button key"
              type="button"
            >
              AC
            </button>
            <button
              class="button key"
              type="button"
            >
              +/-
            </button>
            <button
              class="button key"
              type="button"
            >
              %
            </button>
            <button
              class="button operator"
              type="button"
            >
              ÷
            </button>
          </div>
          <div
            class="child flex"
          >
            <button
              class="button key"
              type="button"
            >
              7
            </button>
            <button
              class="button key"
              type="button"
            >
              8
            </button>
            <button
              class="button key"
              type="button"
            >
              9
            </button>
            <button
              class="button operator"
              type="button"
            >
              x
            </button>
          </div>
          <div
            class="child flex"
          >
            <button
              class="button key"
              type="button"
            >
              4
            </button>
            <button
              class="button key"
              type="button"
            >
              5
            </button>
            <button
              class="button key"
              type="button"
            >
              6
            </button>
            <button
              class="button operator"
              type="button"
            >
              -
            </button>
          </div>
          <div
            class="child flex"
          >
            <button
              class="button key"
              type="button"
            >
              1
            </button>
            <button
              class="button key"
              type="button"
            >
              2
            </button>
            <button
              class="button key"
              type="button"
            >
              3
            </button>
            <button
              class="button operator"
              type="button"
            >
              +
            </button>
          </div>
          <div
            class="child flex"
          >
            <button
              class="button key zero"
              type="button"
            >
              0
            </button>
            <button
              class="button key dot"
              type="button"
            >
              .
            </button>
            <button
              class="button operator equal"
              type="button"
            >
              =
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="calcul"
    >
      <h2>
        Lets do some math!
      </h2>
      <div
        class="container flex"
      >
        <div
          class="child result flex"
        >
          0
        </div>
        <div
          class="child flex"
        >
          <button
            class="button key"
            type="button"
          >
            AC
          </button>
          <button
            class="button key"
            type="button"
          >
            +/-
          </button>
          <button
            class="button key"
            type="button"
          >
            %
          </button>
          <button
            class="button operator"
            type="button"
          >
            ÷
          </button>
        </div>
        <div
          class="child flex"
        >
          <button
            class="button key"
            type="button"
          >
            7
          </button>
          <button
            class="button key"
            type="button"
          >
            8
          </button>
          <button
            class="button key"
            type="button"
          >
            9
          </button>
          <button
            class="button operator"
            type="button"
          >
            x
          </button>
        </div>
        <div
          class="child flex"
        >
          <button
            class="button key"
            type="button"
          >
            4
          </button>
          <button
            class="button key"
            type="button"
          >
            5
          </button>
          <button
            class="button key"
            type="button"
          >
            6
          </button>
          <button
            class="button operator"
            type="button"
          >
            -
          </button>
        </div>
        <div
          class="child flex"
        >
          <button
            class="button key"
            type="button"
          >
            1
          </button>
          <button
            class="button key"
            type="button"
          >
            2
          </button>
          <button
            class="button key"
            type="button"
          >
            3
          </button>
          <button
            class="button operator"
            type="button"
          >
            +
          </button>
        </div>
        <div
          class="child flex"
        >
          <button
            class="button key zero"
            type="button"
          >
            0
          </button>
          <button
            class="button key dot"
            type="button"
          >
            .
          </button>
          <button
            class="button operator equal"
            type="button"
          >
            =
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Home should match Home snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="home"
      >
        <h2>
          Wecome to our page!
        </h2>
        <p>
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius ratione ex tempore error veniam voluptas consectetur ullam iste. Voluptatem accusamus harum numquam atque consectetur saepe architecto libero cum, totam dicta? Iste aspernatur rem quia. Voluptate iure magni minus animi assumenda. Ut laborum placeat nobis consequuntur qui ea ab assumenda voluptatem!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae qui ipsum magni impedit enim. Officiis iste saepe, ipsam minus veritatis architecto? Possimus numquam enim autem commodi molestiae debitis esse perferendis, obcaecati voluptates voluptate fuga repellendus officia quam magnam. Pariatur nisi ipsam incidunt nemo aliquid unde veniam earum dolore consequatur! Inventore error minus repudiandae suscipit soluta cum impedit asperiores reprehenderit nisi laboriosam officiis deserunt provident illo repellendus animi libero, eveniet ducimus.
        </p>
        <p>
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius ratione ex tempore error veniam voluptas consectetur ullam iste. Voluptatem accusamus harum numquam atque consectetur saepe architecto libero cum, totam dicta? Iste aspernatur rem quia. Voluptate iure magni minus animi assumenda. Ut laborum placeat nobis consequuntur qui ea ab assumenda voluptatem!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae qui ipsum magni impedit enim. Officiis iste saepe, ipsam minus veritatis architecto? Possimus numquam enim autem commodi molestiae debitis esse perferendis, obcaecati voluptates voluptate fuga repellendus officia quam magnam. Pariatur nisi ipsam incidunt nemo aliquid unde veniam earum dolore consequatur! Inventore error minus repudiandae suscipit soluta cum impedit asperiores reprehenderit nisi laboriosam officiis deserunt provident illo repellendus animi libero, eveniet ducimus.
        </p>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="home"
    >
      <h2>
        Wecome to our page!
      </h2>
      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius ratione ex tempore error veniam voluptas consectetur ullam iste. Voluptatem accusamus harum numquam atque consectetur saepe architecto libero cum, totam dicta? Iste aspernatur rem quia. Voluptate iure magni minus animi assumenda. Ut laborum placeat nobis consequuntur qui ea ab assumenda voluptatem!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae qui ipsum magni impedit enim. Officiis iste saepe, ipsam minus veritatis architecto? Possimus numquam enim autem commodi molestiae debitis esse perferendis, obcaecati voluptates voluptate fuga repellendus officia quam magnam. Pariatur nisi ipsam incidunt nemo aliquid unde veniam earum dolore consequatur! Inventore error minus repudiandae suscipit soluta cum impedit asperiores reprehenderit nisi laboriosam officiis deserunt provident illo repellendus animi libero, eveniet ducimus.
      </p>
      <p>
        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius ratione ex tempore error veniam voluptas consectetur ullam iste. Voluptatem accusamus harum numquam atque consectetur saepe architecto libero cum, totam dicta? Iste aspernatur rem quia. Voluptate iure magni minus animi assumenda. Ut laborum placeat nobis consequuntur qui ea ab assumenda voluptatem!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae qui ipsum magni impedit enim. Officiis iste saepe, ipsam minus veritatis architecto? Possimus numquam enim autem commodi molestiae debitis esse perferendis, obcaecati voluptates voluptate fuga repellendus officia quam magnam. Pariatur nisi ipsam incidunt nemo aliquid unde veniam earum dolore consequatur! Inventore error minus repudiandae suscipit soluta cum impedit asperiores reprehenderit nisi laboriosam officiis deserunt provident illo repellendus animi libero, eveniet ducimus.
      </p>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
